syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.perficient.orderapp.infrastructure.adapter.in.grpc.model";
option java_multiple_files = true;

message AddProductRequest {
  string id = 1;
  string customerId = 2;
  int32 quantity = 3;
}

message CartResponse {
  string cartId  =1;
  repeated ProductResponse products = 2;
  double totalPrice = 3;
}

message PaymentRequest {
  string customerId = 1;
  string paymentMethod = 2;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  double price = 4;
}

message PaymentDetail {
  string id = 1;
  google.protobuf.Timestamp date = 2;
  double amount = 3;
}

message OrderResponse {
  string orderId = 1;
  string customerId = 2;
  repeated ProductResponse products = 3;
  google.protobuf.Timestamp creationDate = 4;
  PaymentDetail paymentDetail = 5;
  string orderStatus = 6;
}

service CartService {
  rpc addProduct(stream AddProductRequest) returns (CartResponse) {}
}

service PaymentService {
  rpc payOrder(PaymentRequest) returns (OrderResponse) {}
}